# mddl

./: .gitmodules  CMakeLists.txt  README.txt
examples/: count.mid  note_count.mid  sequencer.mid
lib/: lib.io.mid  lib.live.mid  lib.utils.mid
src/: common.hpp  data_ref.cpp  data_ref.hpp  environment.cpp  environment.hpp  errors.hpp  expr.cpp  expr.hpp  ief.hpp  interpreter.cpp  interpreter.hpp  main.cpp  midi_io.cpp  midi_io.hpp  operations.cpp  operations.hpp  printer.hpp  runtime.cpp  runtime.hpp  scheduler.cpp  scheduler.hpp  sequence.cpp  sequence.hpp  syntax.cpp  syntax.hpp  utils.hpp
